--- a/Spring-JWT/pom.xml
+++ b/Spring-JWT/pom.xml
@@ -41,6 +41,13 @@
 		    <version>0.9.1</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+		    <groupId>org.projectlombok</groupId>
+		    <artifactId>lombok</artifactId>
+		    <scope>provided</scope>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
